--- a/_quarto.yml
+++ b/_quarto.yml
@@ -5,14 +5,13 @@ project:
 website:
   description: "A blog built with Quarto"
   site-url: https://your-website-url.example.com # you must change this appropriately for RSS feeds to work properly
-  title: "DataVis334"
+  title: "DATA 334 Blog Posts"
   navbar:
     right:
       - about.qmd
       - icon: github
-        href: https://github.com/
-      - icon: twitter
-        href: https://twitter.com
+        href: https://github.com/M-Sefale/M-Sefale/blob/main/README.md
+  
 format:
   html:
     theme:
